--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,8 @@
 ---
 ---
 
+<title>My Website</title>
+
 <link rel="stylesheet" href="styles.css" type="text/css">
 
 <img src="images/me.jpg" style="width:25%; border:10px solid; margin-right: 20px" align="right">
